# code-indxr

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
code_indxr/: core.py  embedder.py  mcp_server.py
src/: __init__.py  cli.py  indexer.py  mcp_server.py
